2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* CBinding.addin.xml: Bump MD version.

2008-05-30  Lluis Sanchez Gual <lluis@novell.com> 

	* Project/CProject.cs: Properly set debug mode when creating a project.

2008-05-29  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CodeGenerationPanel.cs, md1format.xml, CBinding.addin.xml,
	  CBinding.mdp, Project/CProjectConfiguration.cs,
	  Project/CCompilationParameters.cs, Project/CProject.cs,
	  Makefile.am, Compiler/GNUCompiler.cs: Removed
	  CCompilationParameters because it is not really needed like in the
	  .net case. Also changed the name used to serialize some properties,
	  to better match the msbuild model. Added a serialization map
	  (md1format.xml) for backwards compatibility with the old mdp
	  format.

2008-05-23  Lluis Sanchez Gual <lluis@novell.com> 

	* Project/CProject.cs: BaseDirectory can't be used until the project
	  has been saved. Fixes bug 393945 - Can not create new C Binding
	  project.

2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* CBinding.addin.xml: Merged the extension points for project and
	  solution option panels into a single extension point. A single
	  extension point will now be used for all kinds of items. Extension
	  conditions can be used to make panels visible only for some
	  specific item types.

2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* CBinding.addin.xml: Show build options in the build section.
	* Project/CProjectConfiguration.cs: Fix nullref. Fixes bug #393422.

2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* Project/CProjectServiceExtension.cs, Project/CProject.cs,
	  Compiler/CCompiler.cs, Compiler/ICompiler.cs,
	  Compiler/GNUCompiler.cs: Replaced
	  ICompilerResult/DefaultCompilerResult/CompilerResults by a new
	  BuildResult class, which has owner information at error level, so
	  it is possible to know which project generated an error when
	  building a solution. Updated Task and TaskService to use the new
	  owner information.
